# klimozavr

./: .gitignore  BUILD.md  CHANGELOG.md  README.md  build_exe.ps1  dev_setup.ps1  fix_pyproject.py  klimozawr.spec  pyproject.toml  run_gui.cmd
archive/: README.md
scripts/: build_exe.ps1  smoke_run.ps1
src/klimozawr/: __main__.py  app.py  config.py  logging_setup.py
src/klimozawr/core/: alerts.py  icmp.py  models.py  monitor_engine.py  net.py  status.py
src/klimozawr/services/: rotation.py  sound.py
src/klimozawr/storage/: db.py  migrations.py  repositories.py
src/klimozawr/ui/: app_controller.py  resources.py
src/klimozawr/ui/dialogs/: create_first_admin.py  device_editor.py  login.py  settings_dialog.py  traceroute_dialog.py  user_editor.py
src/klimozawr/ui/strings/: __init__.py  ru.py
src/klimozawr/ui/widgets/: alerts_panel.py  charts.py  device_cards.py  device_details.py  elided_label.py  host_offline_overlay.py
src/klimozawr/ui/windows/: admin_main.py  base_main.py  user_main.py
tests/: test_alerts.py  test_engine_transition.py  test_export.py  test_net.py  test_repo.py  test_sound.py  test_status.py  test_ui_smoke.py
tools/: generate_wavs.py
