[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klimozawr"
version = "0.1.0"
description = "Windows offline ICMP monitor (PySide6 + SQLite + Windows ICMP API)"
requires-python = ">=3.12"
dependencies = [
  "PySide6~=6.7.0",
  "shiboken6~=6.7.0",
  "argon2-cffi>=23.1.0",
]
authors = [{name="klimozawr"}]
readme = "README.md"
license = {file="LICENSE"}

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-qt>=4.4.0",
  "pyinstaller>=6.6.0",
  "ruff>=0.9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]
